--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ php:
   - '7.0'
   - hhvm # on Trusty only
   - nightly
-install: 
-  - php vendor/autoload.php
-  - composer install
+
+before_script:
+  - travis_retry composer self-update
+  - travis_retry composer install --no-interaction --prefer-source --dev
+
+script
+  - vendor/bin/phpunit --coverage-clover=coverage.xml
