--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ before_script:
 
 script: phpunit --coverage-text
 
--bin/phpunit --group intergration
--bin/security-checker security:check composer.lock
+phpunit --group intergration
+security-checker security:check composer.lock
