--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_script:
     - curl -s http://getcomposer.org/installer | php
     - php composer.phar install --dev --prefer-dist --no-interaction
 
-script: -phpunit --coverage-text
-	-phpunit --group intergration
-	-security-checker security:check composer.lock
+script: 
+    - phpunit --coverage-text 
+    - phpunit --group intergration
+    - security-checker security:check composer.lock
